--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,6 +128,7 @@ jobs:
     - name: Cache Rust dependencies
       uses: Swatinem/rust-cache@v2
       with:
+        workspaces: "benchmark/rust_benchmark -> target"
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Fetch Zig dependencies with retry
@@ -179,6 +180,7 @@ jobs:
           ${{ runner.os }}-zig-packages-
 
     - name: Fetch Zig dependencies with retry
+      shell: bash
       run: |
         max_attempts=5
         attempt=1
